--- a/index.html
+++ b/index.html
@@ -115,27 +115,27 @@
     
             <div class="testimonial-content">
                 <div class="testimonial-text">
-                    <p id="testimonial-quote">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base</p>
+                    <p id="testimonial-quote">They are doing amazing job with hundred percent customer satisfaction, Love their work and would like to work with them again</p>
                 </div>
             </div>
     
             <div class="testimonial-authors">
-                <div class="author active" data-testimonial="Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base">
-                    <img src="Ca1.png" alt="Photo de Pierre Hackett" class="author-image">
+                <div class="author active" data-testimonial="They are doing amazing job with hundred percent customer satisfaction, Love their work and would like to work with them again">
+                    <img src="Ca1.PNG" alt="Photo de Pierre Hackett" class="author-image">
                     <div class="author-info">
                         <h4 class="author-name">Pierre Hackett</h4>
                         <p class="author-title">VP of Engineering</p>
                     </div>
                 </div>
-                <div class="author" data-testimonial="Une expérience incroyable, je recommande vivement leurs services !">
-                    <img src="Ca2.png" alt="Photo de Natalia Sanz" class="author-image">
+                <div class="author" data-testimonial="Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster.">
+                    <img src="Ca2.PNG" alt="Photo de Natalia Sanz" class="author-image">
                     <div class="author-info">
                         <h4 class="author-name">Natalia Sanz</h4>
                         <p class="author-title">Head of Technology</p>
                     </div>
                 </div>
-                <div class="author" data-testimonial="Un service rapide et efficace, je suis très satisfait de mon choix.">
-                    <img src="Ca3.png" alt="Photo de Ece Akman" class="author-image">
+                <div class="author" data-testimonial="Bring to the table win-win survival strategies to ensure proactive domination. User generated content in real-time will have multiple touchpoints.">
+                    <img src="Ca3.PNG" alt="Photo de Ece Akman" class="author-image">
                     <div class="author-info">
                         <h4 class="author-name">Ece Akman</h4>
                         <p class="author-title">Senior Marketer</p>
