--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="C:\Users\user\Documents\jemaCodé\téléchargement.svg" alt="Startup Logo">
+                <img src="téléchargement.svg" alt="Startup Logo">
                 
             </div>
             <ul class="nav-links">
